--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kasa",
   "version": "0.1.0",
-  "homepage": "https://jumic14.github.io/Portfolio-JM/",
+  "homepage": "https://jumic14.github.io/Portfolio-JM",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
