--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kasa",
+  "name": "portfolio-jm",
   "version": "0.1.0",
   "homepage": "https://jumic14.github.io/Portfolio-JM/",
   "private": true,
